; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_ucm.c_ib_ucm_remove_one.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_ucm.c_ib_ucm_remove_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { i32 }
%struct.ib_ucm_device = type { i32 }

@ucm_client = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_device*)* @ib_ucm_remove_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ib_ucm_remove_one(%struct.ib_device* %0) #0 {
  %2 = alloca %struct.ib_device*, align 8
  %3 = alloca %struct.ib_ucm_device*, align 8
  store %struct.ib_device* %0, %struct.ib_device** %2, align 8
  %4 = load %struct.ib_device*, %struct.ib_device** %2, align 8
  %5 = call %struct.ib_ucm_device* @ib_get_client_data(%struct.ib_device* %4, i32* @ucm_client)
  store %struct.ib_ucm_device* %5, %struct.ib_ucm_device** %3, align 8
  %6 = load %struct.ib_ucm_device*, %struct.ib_ucm_device** %3, align 8
  %7 = icmp ne %struct.ib_ucm_device* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.ib_ucm_device*, %struct.ib_ucm_device** %3, align 8
  %11 = getelementptr inbounds %struct.ib_ucm_device, %struct.ib_ucm_device* %10, i32 0, i32 0
  %12 = call i32 @device_unregister(i32* %11)
  br label %13

13:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.ib_ucm_device* @ib_get_client_data(%struct.ib_device*, i32*) #1

declare dso_local i32 @device_unregister(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
